fix Recent News category page to ensure that subscribe button is z-indexed on top of H1

--- a/wp-content/themes/freshenergy/less/child.less
+++ b/wp-content/themes/freshenergy/less/child.less
@@ -511,6 +511,7 @@ img.header_img {
       position: absolute;
       right: 0;
       float:none;
+      z-index:2;
     }
 
     h1 {
